argocd/apps/goldilocks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goldilocks-dashboard-nodeport
  namespace: goldilocks
  labels:
    app.kubernetes.io/name: goldilocks
    app.kubernetes.io/instance: goldilocks
    app.kubernetes.io/component: dashboard
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: goldilocks
    app.kubernetes.io/instance: goldilocks
    app.kubernetes.io/component: dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 31010
